kubernetes/base/network/envoy-gateway/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
    gatus.home-operations.com/endpoint: |-
      alerts:
        - type: pushover
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      external-dns.alpha.kubernetes.io/target: *hostname
      lbipam.cilium.io/ips: ${CLOUDFLARE_GATEWAY_ADDR}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.${SECRET_DOMAIN}
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
      group: guarded
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      external-dns.alpha.kubernetes.io/target: *hostname
      lbipam.cilium.io/ips: ${CLUSTER_GATEWAY_ADDR}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
